# cbor-ld-ex

./: .gitignore  LOGBOOK.md  README.md  findings.md  pyproject.toml
benchmarks/: run_decode_throughput.py  run_temporal_delta.py  run_tier_simulation.py  run_wire_size_experiment.py
benchmarks/cbor_ld_ex_benchmark/: __init__.py  real_data.py  simulation.py
demo/: benchmark.py  simulation.py
spec/: FORMAL_MODEL.md  FORMAL_MODEL_v040_AMENDMENTS.md  IMPLEMENTATION_PLAN.md  PHASE0_TURBOQUANT_THEORY_v4.md  SECTION7_TEMPORAL.md  SYNDROME_LOCALIZATION.md
spec/archive/: SECTION9_SECURITY.md
spec/rust-reference/: norm_max_canonical.txt
src/cbor_ld_ex/: __init__.py  annotations.py  batch.py  bitpack.py  codec.py  headers.py  opinions.py  security.py  stream.py  temporal.py  transport.py
tests/: test_annotations.py  test_axioms.py  test_batch.py  test_benchmark.py  test_codec.py  test_headers.py  test_opinions.py  test_real_data.py  test_security.py  test_simulation.py  test_stream.py  test_temporal.py  test_transport.py
